lib/tests/ui/log_macros_too_many_args.rs
//! Test too many arguments for log_macros

use lib_common::log_macros;

log_macros!("one", "two", "three");

fn main() {}
